--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@
     top: 0;
     left: 0;
     /* border: 2px solid rebeccapurple; */
-    width: 380px;
+    width: 100%;
     height: 100vh;
     background-color: var(--darkblue);
     transform: translateX(-100%);
